--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,21 @@
+@import "../styles/index.css";
 
-/* 
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
 
-*/
+.bigCounter {
+    display: inline-block;
+    margin: auto;
+    text-align: center;
+}
+
+.bigCounter div {
+
+    display: inline-block;
+    font-size:100px;
+    line-height: 120px;
+   
+    background: black;
+    color: white;
+    padding: 10px;
+   
+}
